--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-vue": "^9.1.1",
     "path": "^0.12.7",
     "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.6.1",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
