--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "v3-tpl",
+  "name": "{{name}}",
   "version": "1.0.0",
-  "description": "Vue3 project template",
-  "author": "realzzz1874@gmail.com",
+  "description": "{{description}}",
+  "author": "{{author}}",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -32,13 +32,5 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Realzzz1874/v3-tpl.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Realzzz1874/v3-tpl/issues"
-  },
-  "homepage": "https://github.com/Realzzz1874/v3-tpl#readme"
+  }
 }
