--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.1.0",
     "less": "^4.1.3",
+    "naive-ui": "^2.32.1",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.7.1",
     "typescript": "^4.5.4",
