--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.1.0",
     "less": "^4.1.3",
+    "postcss": "^8.4.16",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
